# KongoniBridge

./: .gitignore  CMakeLists.txt  FEAnalyzer.cxx  FEAnalyzer.h  LICENSE  README.md  Vec2f.h  main.cxx  resources.qrc  version.h
js/: colormap.js
qml/: Card.qml  Field.qml  Instructions.qml  MainWindow.qml  RgBeam.qml  RgBridge.qml  RgButton.qml  RgNode.qml  RgText.qml
